--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -41,6 +41,7 @@
 <script type="text/javascript">
 window.initMaps = function () {};
 Raven.config('https://e0a74360af9e49b7ad43b4ded11a4359@app.getsentry.com/70270').install();
+InstantClick.init();
 </script>
 <script type="text/javascript" src="{{ "/dist/site.js" | append: '?' | append: site.circle_sha | prepend: site.baseurl }}"></script>
 <script async
