--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -21,7 +21,7 @@
   <meta name="twitter:creator" content="@atticoos"/>
 
   <link rel="icon" href="/favicon.png" type="image/x-icon"/>
-  <link rel="stylesheet" href="{{ "/dist/main.css" | append: '?' | append: site.circle_sha | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/dist/main.css" | append: '?' | append: site.env.circle_sha | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,600|Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
