bernie messenger work

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -631,6 +631,15 @@ body.page-index {
           float: right;
         }
       }
+
+      /* project specific alignments */
+      &.bernie-messenger {
+        .preview img {
+          max-height: 500px;
+          display: block;
+          margin: auto
+        }
+      }
     }
     .more-items {
       text-align: center;
