--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -38,6 +38,20 @@
         {% include web-preview.html image="/dist/images/projects/tweetdrive/tweetdrive1.jpg" alt="TweetDrive" %}
       </div>
     </div>
+    <div class="portfolio-row bernie-messenger">
+      <div class="info">
+        <h1>Bernie Messenger</h1>
+        <h2>Helps the campaign distribute official calls to action</h2>
+        <p>
+          Bernie Messenger helps users communicate official calls to action from the Bernie 2016 campaign to their
+          personal contacts. I built this mobile application with React Native and Redux and manage its distribution.
+        </p>
+        <a href="https://go.berniesanders.com/page/content/bernie-messenger" target="_blank">View Project</a>
+      </div>
+      <div class="preview">
+        <img src="/dist/images/projects/bernie-messenger/device-messenger.png" alt="Bernie Messenger" />
+      </div>
+    </div>
     <div class="more-items">
       <a href="#view-more-portfolio" id="view-more-portfolio">See more projects</a>
     </div>
