open source contrib update

--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -33,6 +33,17 @@
       </div>
       <div class="item">
         <div class="preview">
+          <img src="/dist/images/blank.png" data-original="/dist/images/labs/bernie-messenger.png" alt="Bernie
+          Messenger" />
+          <h3>Bernie Messenger</h3>
+          <p>Helps the Bernie 2016 campaign distribute official calls to actions</p>
+          <a href="https://github.com/bernie-2016/bernie-messenger-android"
+             target="_blank"
+             title="Bernie Messenger">View project</a>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/slackify.png" alt="Slackify" />
           <h3>Slackify</h3>
           <p>Upload files and stdin pipes to Slack from your CLI</p>
