--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -27,6 +27,7 @@
 @import './home';
 @import './home/portfolio';
 @import './blog';
+@import './projects';
 @import './highlight';
 @import './web-preview';
 
