--- a/src/_assets/less/homeNew.less
+++ b/src/_assets/less/homeNew.less
@@ -5,8 +5,8 @@ section.landing {
   .amburgah {
     position: absolute;
     display: block;
-    right: 35px;
-    top: 35px;
+    right: 50px;
+    top: 50px;
     width: 30px;
     z-index: 50;
     span {
@@ -25,7 +25,7 @@ section.landing {
   &.ham {
     .amburgah {
       .bar-1 {
-        top: 6px;
+        top: 7px;
         transform: rotate(45deg);
         -ms-transform: rotate(45deg);
         -webkit-transform: rotate(45deg);
@@ -41,7 +41,7 @@ section.landing {
       }
     }
     .ham-overlay {
-      display: block;
+      display: flex;
       animation: fadeIn 0.5s;
     }
     .content, canvas {
@@ -81,12 +81,46 @@ section.landing {
     }
   }
 
+  .down {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    margin-left:-20px;
+    width: 16px;
+    height: 20px;
+    animation: bounce 1.5s infinite;
+
+    &:before,
+    &:after {
+      content: ' ';
+      position: absolute;
+      display: block;
+      background-color: @blue;
+      width: 3px;
+      height: 20px;
+    }
+    &:before {
+      transform: rotate(-45deg);
+      left: 0;
+    }
+    &:after {
+      transform: rotate(45deg);
+      right: 0;
+    }
+  }
+
   canvas {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+  }
+
+  @keyframes bounce {
+    0% {margin-bottom: 0; }
+    50% {margin-bottom: 20px; }
+    100% {margin-bottom: 0; }
   }
 
   @keyframes fadeIn {
@@ -103,6 +137,8 @@ section.landing {
     bottom: 0;
     left: 0;
     right: 0;
+    align-items: center;
+    justify-content: center;
 
     .links {
       position: relative;
@@ -112,7 +148,7 @@ section.landing {
       a {
         display: block;
         font-size: 62px;
-        margin: 10 auto;
+        margin: 15px auto;
       }
     }
   }
