nav/hamburger improvements

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -266,7 +266,8 @@ body.page-index {
 }
 
 .home section.intro {
-  position: relative;;
+  position: relative;
+  padding-top: 80px;
   .row {
     margin-top: 20px;
     margin-bottom: 20px;
