--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -44,4 +44,13 @@
       </a>
     </div>
   </div>
+
+
+  <div class="ham-overlay">
+    <div class="links">
+      <a href="/" class="home">Home</a>
+      <a href="/#portfolio" class="portfolio">Work</a>
+      <a href="/blog" class="blog">Blog</a>
+    </div>
+  </div>
 </header>
